Update api classes to be of format .ns-{platform}-{sdkVersion} which should allow targeting both platform and sdkVersion Fix SideDrawer header vertical alignment Return .hr-light/dark Update CHANGELOG Update dependencies

--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -7,6 +7,14 @@
     @include colorize($contrasted-border-color: primary background -70%);
 }
 
+.hr-light {
+    @include colorize($border-color: accent-light);
+}
+
+.hr-dark {
+    @include colorize($border-color: accent-dark);
+}
+
 // export each map to CSS custom variables
 
 .ns-root,
