--- a/src/scss/mixins/components/_action-bar.scss
+++ b/src/scss/mixins/components/_action-bar.scss
@@ -29,7 +29,7 @@
             padding-top: 24;
         }
 
-        .ns-api-19.ns-statusbar-transparent Page > &,
+        .ns-android__19.ns-statusbar-transparent Page > &,
         .ns-modal.ns-statusbar-transparent Page > & {
             padding-top: 0;
        }
